Swirched `.fixed` for `.not-visible`

--- a/css/mixture.less
+++ b/css/mixture.less
@@ -339,7 +339,7 @@ div.no {
   margin: 0;
   padding: 0;
 }
-div.fixed {
+div.not-visible {
   position: fixed;
 }
 /*
